# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: page_analyzer-check.yml
page_analyzer/: app.py  db_manager.py  html_parser.py  parser.py  scraper.py  url_parser.py  validate.py
page_analyzer/templates/: base.html  error.html  index.html  url.html  urls.html
tests/: test_app.py  test_db_manager.py  test_html_parser.py  test_parser.py  test_scraper.py  test_validator.py
